	PR target/12900 	* reg-stack (move_for_stack_reg): New prototype.  Return 	whether a control flow insn was deleted. 	(subst_stack_regs_pat): Likewise, using the information provided 	by move_for_stack_reg. 	(subst_stack_regs): Likewise, using the information provided 	by subst_stack_regs_pat. 	(convert_regs_1): Record whether a control flow insn was deleted, 	using the information provided by subst_stack_regs.  Purge dead 	edges only if a control flow insn was deleted.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@73977 138bc75d-0d04-0410-961f-82ee72b054a4